2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (read_cursor_theme),
	(gnome_theme_cursor_info_free): copy the name for the default cursor,
	too, lest we crash on free, and only unref the thumbnail if we have
	one

2007-07-28  Denis Washington  <denisw@svn.gnome.org>

	* gnome-theme-info.c: (read_cursor_theme), (look_for_cursor_theme):
	Also load the "default" cursor theme as GnomeThemeCursorInfo so
	we know about the available sizes. (bug #462409)

2007-08-03  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: reduce metatheme thumbnail size to 128x128

2007-08-02  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_color_scheme_parse): no need for an
	expensive parse to initialize the colors

2007-08-02  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (generate_metacity_theme_thumbnail),
	(generate_icon_theme_thumbnail): don't generate GTK thumbnails when we
	want metacity or icon (bug #462724)

2007-07-30  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_color_scheme_parse),
	(gnome_theme_color_scheme_equal):
	* gnome-theme-info.h: add symbolic colors enum and use it

2007-07-30  Thomas Wood  <thos@gnome.org>

	* gnome-theme-info.c: (gnome_theme_color_scheme_parse): Add tooltip foreground
	and background colours to the list of recognised symbolic colours.

2007-07-29  Thomas Wood  <thos@gnome.org>

	* gnome-theme-info.c: (gnome_theme_read_meta_theme): Expand check for empty
	metatheme colour scheme to include blank colour scheme strings.

2007-07-29  Thomas Wood  <thos@gnome.org>

	* gnome-theme-apply.c: (gnome_meta_theme_set):
	* gtkrc-utils.c: (gtkrc_get_details), (gtkrc_get_color_scheme):

	Prevent some memory leaks

2007-07-28  Denis Washington  <denisw@svn.gnome.org>

	* gnome-theme-info.h:
	* gnome-theme-info.c: (look_in_cursor_theme),
	(gnome_theme_cursor_info_free):
	Read a cursor theme's name from it's index.theme file if it has one.
